# R-Type

./: .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  build.bat  build.sh  coding-style.bat  coding-style.sh
client/: CMakeLists.txt  main.cpp
client/components/: AllyNumber.hpp  Animation.hpp  Clickable.hpp  Controllable.hpp  DebugColliderDisplay.hpp  Drawable.hpp  Explosive.hpp  Form.hpp  InputShooter.hpp  Key.hpp  LastUpdate.hpp  RoomInformations.hpp  Scrollable.hpp  Selectable.hpp  ServerID.hpp  Sound.hpp  Text.hpp  TextInput.hpp  TextInputable.hpp
client/loads/: CMakeLists.txt  GamePrefabs.cpp  OptionPage.cpp  endPage.cpp  joinPage.cpp  loads.hpp  loginPage.cpp  menuPage.cpp  roomPage.cpp
client/network/: CMakeLists.txt  Client.cpp  Client.hpp
client/src/: main.cpp
client/src/components/: Drawable.hpp
client/src/systems/: CMakeLists.txt
client/src/utils/: CMakeLists.txt
client/src/utils/AssetsManager/: AssetsManager.cpp  AssetsManager.hpp
client/systems/: AckSystem.hpp  Animator.hpp  Click.hpp  Control.hpp  DebugColliderDisplayer.hpp  Draw.hpp  InputShoot.hpp  KeyInput.hpp  NetworkControl.hpp  NetworkInboxChecker.hpp  NetworkInboxHandler.hpp  NetworkInputShoot.hpp  NetworkOutboxHandler.hpp  Scroll.hpp  Selection.hpp  SoundSystem.hpp  SwitchScene.hpp  TextInput.hpp  TimeoutKiller.hpp  UpdateInputOptions.hpp  UpdateKeyInputBox.hpp  UpdateRoomInformations.hpp
client/utils/: CMakeLists.txt
client/utils/AssetsManager/: AssetsManager.cpp  AssetsManager.hpp
client/utils/KeyToString/: KeyToString.cpp  KeyToString.hpp
client/utils/OptionManager/: OptionManager.cpp  OptionManager.hpp
client/utils/SceneManager/: SceneManager.cpp  SceneManager.hpp  Scenes.hpp
libs/ecs/: .gitignore  CMakeLists.txt  ECS.hpp  Entity.hpp  Exceptions.hpp  IndexedZipper.hpp  IndexedZipperIterator.hpp  Prefab.hpp  README.md  Registry.hpp  SparseArray.hpp  Zipper.hpp  ZipperIterator.hpp
libs/ecs/include/: Exceptions.hpp  IDeltaTimeProvider.hpp  IndexedZipper.hpp  IndexedZipperIterator.hpp  Prefab.hpp  RealDeltaTimeProvider.hpp  Registry.hpp  SparseArray.hpp  Zipper.hpp  ZipperIterator.hpp
libs/sharedEcsElements/: CMakeLists.txt
libs/sharedEcsElements/component/: CMakeLists.txt  Drawable.hpp  Transformable.hpp
libs/sharedEcsElements/components/: CMakeLists.txt  Collider.hpp  Controllable.hpp  Damage.hpp  GameLevel.hpp  GameRoom.hpp  Health.hpp  InputShooter.hpp  Killable.hpp  Loot.hpp  Lootable.hpp  Nameable.hpp  Path.hpp  Points.hpp  ServerID.hpp  Shooter.hpp  Spawner.hpp  Speed.hpp  Taker.hpp  Transform.hpp  Transformable.hpp  Velocity.hpp
libs/sharedEcsElements/events/: DamageInfliction.hpp
libs/sharedEcsElements/systems/: CMakeLists.txt  ClearEvents.hpp  Collision.hpp  DamageInflictor.hpp  Death.hpp  InputShoot.hpp  Kill.hpp  Logging.hpp  Path.hpp  Shoot.hpp  Spawner.hpp  VelocityApplicator.hpp
libs/sharedEcsElements/systems/Control/: Control.cpp  Control.hpp
libs/sharedEcsElements/systems/Draw/: Draw.cpp  Draw.hpp
libs/sharedEcsElements/systems/Logging/: Logging.cpp  Logging.hpp
libs/sharedEcsElements/systems/VelocityApplicator/: VelocityApplicator.cpp  VelocityApplicator.hpp
libs/sharedEcsElements/tags/: Ally.hpp  Boss.hpp  Enemy.hpp
libs/sharedEcsElements/utils/: CMakeLists.txt  CustomPrefab.hpp  EventManager.hpp  PrefabManager.hpp  PrefabsMapping.hpp  Rectangle.hpp  SingletonWrapper.hpp  Vector.hpp
libs/sharedEcsElements/utils/AssetsManager/: AssetsManager.cpp  AssetsManager.hpp
server/: CMakeLists.txt  main.cpp
server/components/: BulletInformation.hpp  EnemyInformation.hpp  EntityInformation.hpp  NetworkPlayer.hpp  NetworkPlayerControl.hpp  NetworkServer.hpp
server/network/: ContextManager.hpp  IntervalTimer.hpp  NetworkServer.hpp
server/src/: main.cpp
server/systems/: BulletDestroyer.hpp  CMakeLists.txt  Control.hpp  EnemyDespawner.hpp  EnemyShootControl.hpp  EntityDespawner.hpp  EntityShootControl.hpp  GameRoomCollision.hpp  LooseEvent.hpp  NetworkEventDamageInfliction.hpp  NetworkKill.hpp  NetworkPlayerCriticalDispatcher.hpp  NetworkPlayerDisconnection.hpp  NetworkPlayerHandlerSystem.hpp  NetworkServerInboxDispatcher.hpp  NetworkServerOutboxDispatcher.hpp  NetworkServerTickSystem.hpp  NetworkServerTickUpdater.hpp  RoomCleanup.hpp  ServerDeath.hpp  ServerSpawner.hpp  ShootControl.hpp  TakeLoot.hpp
server/utils/: Communication.hpp  GameLogicManager.hpp  ToggleBool.hpp
tests/: CMakeLists.txt  main.cpp
tests/client/: CMakeLists.txt
tests/client/components/: CMakeLists.txt
tests/client/systems/: Animator.test.cpp  CMakeLists.txt  Control.test.cpp  Scroll.test.cpp
tests/client/utils/: CMakeLists.txt  SceneManager.test.cpp
tests/functionnal/: pack.py  server.py
tests/libs/: CMakeLists.txt
tests/libs/ecs/: CMakeLists.txt  Entity.test.cpp  IndexedZipper.test.cpp  Prefab.test.cpp  Registry.test.cpp  SparseArray.test.cpp  Zipper.test.cpp
tests/libs/network/: CMakeLists.txt  NetworkMessage.test.cpp  NetworkMessageQueue.test.cpp
tests/libs/sharedEcsElements/: CMakeLists.txt
tests/libs/sharedEcsElements/components/: CMakeLists.txt  Collider.test.cpp  Controllable.test.cpp  Damage.test.cpp  Health.test.cpp  InputShooter.test.cpp  Nameable.test.cpp  Path.test.cpp  Points.test.cpp  ServerId.test.cpp  Shooter.test.cpp  Spawner.test.cpp  Speed.test.cpp  Transform.test.cpp  Transformable.test.cpp  Velocity.test.cpp
tests/libs/sharedEcsElements/events/: CMakeLists.txt
tests/libs/sharedEcsElements/systems/: CMakeLists.txt  Collision.test.cpp  DamageInflictor.test.cpp  Death.test.cpp  InputShoot.test.cpp  Logging.test.cpp  Path.test.cpp  Shoot.test.cpp  Spawner.test.cpp  VelocityApplicator.test.cpp
tests/libs/sharedEcsElements/utils/: CMakeLists.txt  CustomPrefab.test.cpp  (+4 more)
tests/others/: uuid.test.cpp
tests/server/: CMakeLists.txt
tests/server/components/: BulletInformation.test.cpp  CMakeLists.txt  NetworkPlayer.test.cpp  NetworkPlayerControl.test.cpp
tests/server/systems/: CMakeLists.txt  Control.test.cpp
tests/server/utils/: CMakeLists.txt  GameLogicManager.test.cpp  ToggleBool.test.cpp
(+8 files in other folders)
